# PlantoSmart

./: .gitignore  CMakeLists.txt  README.md
.github/agents/: esp-idf-6-firmware.agent.md
.github/prompts/: esp-idf-6-workflow.prompt.md
Design/: cage.3mf  esp32.3mf  mcp-regulador.3mf  moisture-sensor.3mf  plate.3mf
Doc/: board-design.fzz  method-signatures.md
include/: c_system.h  config.h  display.h  i2c_scan.h  sensors.h  telegram.h  wifi.h
lib/ssd1306/: CMakeLists.txt  ssd1306.h
main/: CMakeLists.txt  c_system.c  config.c  display.c  i2c_scan.c  main.c  sensors.c  telegram.c  wifi.c
